[package]
name = "ereea"
version = "0.1.0"
edition = "2024"

# Configuration pour générer plusieurs binaires
[[bin]]
name = "simulation"  # Le serveur de simulation
path = "src/bin/simulation.rs"

[[bin]]
name = "earth"       # Le client d'affichage (Terre)
path = "src/bin/earth.rs"

[dependencies]
# Dépendances existantes
noise = "0.8"
rand = "0.8"
crossterm = "0.27"

# Nouvelles dépendances pour le réseau
serde = { version = "1.0", features = ["derive"] }  # Sérialisation des données
serde_json = "1.0"                                  # Format JSON pour transport
tokio = { version = "1.34", features = ["full"] }   # Runtime asynchrone